# gatling

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cornell.usda  cornell.usdc  gs_sh0_mat.mtlx  gs_sh0_mat.mxsl
src/cgpu/: CMakeLists.txt  cgpu.c  cgpu.cpp  cgpu.h  cgpu.hpp  handle_store.c  handle_store.cpp  handle_store.h  handle_store.hpp  resource_store.c  resource_store.h
src/cgpu/impl/: Cgpu.cpp  CgpuMtl.cpp  CgpuVk.cpp  Cgpu_metal.cpp  ShaderReflection.cpp  ShaderReflection.h
src/cgpu/include/: Cgpu.h  cgpu.h
src/cgpu/src/: Cgpu.cpp  ShaderReflection.cpp  ShaderReflection.h  cgpu.c  cgpu.cpp  dataStoreCpu.cpp  dataStoreCpu.h  handleStore.h  handle_store.c  handle_store.cpp  handle_store.h  linearDataStoreCpu.cpp  linearDataStoreCpu.h  resource_store.c  resource_store.cpp  resource_store.h  shaderReflection.cpp  shaderReflection.h  shader_reflection.c  shader_reflection.cpp  shader_reflection.h
src/gatling/: Argparse.cpp  Argparse.h  CMakeLists.txt  SimpleRenderTask.cpp  SimpleRenderTask.h  img.c  img.h  kernel_ray_gen.comp  main.c  main.cpp  mmap.c  mmap.h  prim_ray_gen.comp  test.comp  trace_ray.comp
src/gatling/shaders/: common.glsl  extensions.glsl  kernel_extend.comp  kernel_ray_gen.comp  kernel_shade.comp  main.comp
src/gatling_preprocess/: CMakeLists.txt  bvh.c  bvh.h  gp.h  main.c  main.cpp  math.h
src/gb/: CMakeLists.txt
src/gb/impl/: HandleStore.cpp  Hash.cpp  Log.cpp  SmallVector.cpp
src/gb/include/: LinearDataStore.h  handleStore.h  linearDataStore.h  log.h
src/gb/src/: LinearDataStore.cpp  Log.cpp  handleStore.cpp  linearDataStore.cpp  log.cpp  smallVector.cpp
src/ggpu/: CMakeLists.txt
src/ggpu/impl/: BumpAllocator.cpp  DelayedResourceDestroyer.cpp  DeleteQueue.cpp  DenseDataStore.cpp  LinearDataStore.cpp  ResizableBuffer.cpp  Stager.cpp  SyncBuffer.cpp
src/ggpu/include/: DenseDataStore.h  LinearDataStore.h  ResizableBuffer.h  Stager.h  SyncBuffer.h  denseDataStore.h  linearDataStore.h  resizableBuffer.h  resourceDestroyer.h  stager.h  syncBuffer.h
src/ggpu/src/: DenseDataStore.cpp  ResizableBuffer.cpp  Stager.cpp  denseDataStore.cpp  linearDataStore.cpp  resizableBuffer.cpp  resourceDestroyer.cpp  stager.cpp  syncBuffer.cpp
src/gi/: CMakeLists.txt
src/gi/impl/: AssetReader.cpp  AssetReader.h  Gi.cpp  GlslShaderCompiler.cpp  GlslShaderCompiler.h  GlslShaderGen.cpp  GlslShaderGen.h  GlslShaderProvider.cpp  GlslShaderProvider.h  GlslStitcher.cpp  GlslStitcher.h  MeshProcessing.cpp  MeshProcessing.h  Mmap.cpp  Mmap.h  Oidn.cpp  Oidn.h  ShaderCacheFactory.cpp  ShaderCacheFactory.h  TextureManager.cpp  TextureManager.h  Turbo.h  Tza.cpp  Tza.h  main.cpp
src/gi/include/: Gi.h  gi.h
src/gi/mdl/: OmniGlass.mdl  OmniGlass_Opacity.mdl  OmniPBR.mdl  OmniPBRBase.mdl  OmniPBR_ClearCoat.mdl  OmniPBR_ClearCoat_Opacity.mdl  OmniPBR_Opacity.mdl  OmniSurface.mdl  OmniSurfaceBlend.mdl  OmniSurfaceLite.mdl  OmniSurfacePresets.mdl
src/gi/mtlx/: gltf_pbr.mtlx  open_pbr_surface.mtlx  open_pbr_surface_1_38.mtlx  standard_surface.mtlx
src/gi/shaders/: aovs.glsl  colormap.glsl  common.glsl  mdl_interface.glsl  mdl_renderer_state.glsl  mdl_shading_state.glsl  mdl_types.glsl  rp_denoise.comp  rp_main.ahit  rp_main.chit  rp_main.miss  rp_main.rgen  rp_main_descriptors.glsl  rp_main_payload.glsl  rp_main_shadow.miss  rp_max_luminance.comp  rt_descriptors.glsl  rt_main.ahit  rt_main.chit  rt_main.miss  rt_main.rgen  rt_payload.glsl  rt_shading_state.glsl  rt_shadow.miss
src/gi/src/: AssetReader.cpp  AssetReader.h  Gi.cpp  GlslShaderCompiler.cpp  GlslShaderGen.cpp  GlslShaderGen.h  GlslStitcher.cpp  GlslStitcher.h  Mmap.cpp  Stager.cpp  Stager.h  TextureManager.cpp  TextureManager.h  assetReader.cpp  assetReader.h  asset_reader.cpp  asset_reader.h  bvh.c  bvh.cpp  bvh.h  bvh_collapse.c  bvh_collapse.cpp  bvh_collapse.h  bvh_collapse.inl  bvh_compress.c  bvh_compress.cpp  bvh_compress.h  bvh_embree.cpp  bvh_embree.h  dataStoreGpu.cpp  dataStoreGpu.h  gi.c  gi.cpp  linearDataStoreGpu.cpp  linearDataStoreGpu.h  main.cpp  mmap.cpp  mmap.h  stager.cpp  stager.h  (+5 more)
src/gml/: CMakeLists.txt
src/gml/include/: gml.h
src/gml/src/: gml.c
src/gp/: CMakeLists.txt  aabb.c  aabb.h  bvh.c  bvh.h  bvh_collapse.c  bvh_collapse.h  bvh_compress.c  bvh_compress.h  gp.h  main.c  math.c  math.h
src/hdGatling/: .gitattributes  CMakeLists.txt  Camera.h  Instancer.cpp  Instancer.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialNetworkCompiler.cpp  MaterialNetworkCompiler.h  MaterialNetworkPatcher.cpp  MaterialNetworkPatcher.h  MaterialNetworkTranslator.cpp  MaterialNetworkTranslator.h  MdlDiscoveryPlugin.cpp  MdlParserPlugin.h  Mesh.cpp  Mesh.h  PreviewSurfaceNetworkPatcher.cpp  RenderBuffer.cpp  RenderBuffer.h  RenderDelegate.cpp  RenderDelegate.h  RenderParam.cpp  RenderParam.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp  RendererPlugin.h  Tokens.cpp  Tokens.h  instancer.cpp  instancer.h  light.cpp  light.h  main.cpp  material.cpp  material.h  materialNetworkCompiler.cpp  (+26 more)
src/hdGatling/include/: RendererPlugin.h
src/hdGatling/src/: Camera.cpp  Camera.h  Instancer.cpp  Instancer.h  Material.cpp  Material.h  MaterialNetworkTranslator.cpp  MaterialNetworkTranslator.h  MdlDiscoveryPlugin.cpp  MdlDiscoveryPlugin.h  MdlParserPlugin.cpp  MdlParserPlugin.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  RenderDelegate.cpp  RenderDelegate.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp  Settings.cpp  Settings.h  Tokens.cpp  Tokens.h
src/imgio/: CMakeLists.txt
src/imgio/impl/: DdsDecoder.cpp  DdsDecoder.h  ExrDecoder.cpp  ExrDecoder.h  HdrDecoder.cpp  HdrDecoder.h  Imgio.cpp  JpegDecoder.cpp  JpegDecoder.h  PngDecoder.cpp  PngDecoder.h  TgaDecoder.cpp  TgaDecoder.h  TiffDecoder.cpp  TiffDecoder.h  main.cpp
src/imgio/include/: ErrorCodes.h  Imgio.h  error_codes.h  img.h  imgio.h
src/imgio/src/: HdrDecoder.cpp  Imgio.cpp  JpegDecoder.cpp  exr.cpp  (+14 more)
src/mc/: CMakeLists.txt
src/mdl-image-plugin/: CMakeLists.txt  plugin.cpp  plugin.h
src/shadergen/: CMakeLists.txt  LICENSE.txt
src/vma-c/: CMakeLists.txt
(+229 files in other folders)
